--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,11 +15,13 @@ dependencies:
   flutter_bloc: ^8.1.5
   get_it: ^7.7.0
   http: ^1.2.1
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
+  flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  very_good_analysis: ^5.1.0
 
 flutter:
   uses-material-design: true
