--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   flutter_bloc: ^8.1.5
   get_it: ^7.7.0
   http: ^1.2.1
+  page_view_dot_indicator: ^2.3.0
+  provider: ^6.1.2
   shared_preferences: ^2.2.3
 
 dev_dependencies:
