--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   get_it: ^7.7.0
   http: ^1.2.1
   intl: any
+  jwt_decoder: ^2.0.1
   page_view_dot_indicator: ^2.3.0
   provider: ^6.1.2
   shared_preferences: ^2.2.3
