--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,15 +7,16 @@ environment:
   sdk: '>=3.4.0 <4.0.0'
 
 dependencies:
-  bloc: ^8.1.4
+  bloc: ^9.1.0
   dartz: ^0.10.1
   equatable: ^2.0.5
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.5
+  flutter_bloc: ^9.1.1
+  flutter_gen: ^5.12.0
   flutter_localizations:
     sdk: flutter
-  get_it: ^7.7.0
+  get_it: ^9.0.5
   http: ^1.2.1
   intl: any
   jwt_decoder: ^2.0.1
@@ -25,10 +26,10 @@ dependencies:
   uuid: ^4.4.0
 
 dev_dependencies:
-  flutter_lints: ^3.0.0
+  flutter_lints: ^6.0.0
   flutter_test:
     sdk: flutter
-  very_good_analysis: ^5.1.0
+  very_good_analysis: ^10.0.0
 
 flutter:
   uses-material-design: true
